Update .gitignore and index.html with latest improvements

--- a/.gitignore
+++ b/.gitignore
@@ -54,4 +54,50 @@ var/
 wheels/
 *.egg-info/
 .installed.cfg
-*.egg 
+*.egg
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+debug.log
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# pyenv
+.python-version
+
+# mypy
+.mypy_cache/
+.dmypy.json
+
+# VS Code
+.vscode/
+
+# Data, output, and config
+/data/
+ml_pipeline/output/
+config/serviceAccountKey.json
+
+# Other
+*.log
+ml_pipeline/firebase-credentials.json
+*.pkl
+*.joblib
+*.sav 
