--- a/.gitignore
+++ b/.gitignore
@@ -5,20 +5,8 @@ __pycache__/
 *.so
 .Python
 build/
-develop-eggs/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
 *.egg-info/
-.installed.cfg
-*.egg
 
 # Virtual Environment
 venv/
@@ -37,6 +25,56 @@ Thumbs.db
 
 # Jupyter Notebook
 .ipynb_checkpoints
+
+# Sensitive Information Only
+ml_pipeline/firebase-credentials.json
+ml_pipeline/serviceAccountKey.json
+ml_pipeline/credentials.json
+
+# Credentials and Secrets
+**/*.key
+**/*.pem
+**/*.crt
+**/*.env
+**/*.env.*
+**/*.secret
+**/*.token
+**/*.auth
+**/*.cred
+**/*.pwd
+**/*.pass
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+.temp/
+.tmp/
+
+# Backup files
+*.bak
+*~
+*.swp
+*.swo
+*#
+
+# Web Development
+node_modules/
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Documentation
+docs/_build/
+docs/_static/
+docs/_templates/
+*.md.bak
+*.html.bak
 
 # Distribution / packaging
 .Python
@@ -57,8 +95,6 @@ wheels/
 *.egg
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -91,9 +127,32 @@ coverage.xml
 .vscode/
 
 # Data, output, and config
-/data/
-ml_pipeline/output/
 config/serviceAccountKey.json
+
+# Web Development
+node_modules/
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+.temp/
+.tmp/
+
+# Backup files
+*.bak
+*~
+*.swp
+*.swo
+*#
 
 # Other
 *.log
